--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
   </div>
   <div id="js">
   </div>
-  <script src="./script.js"></script>
+  <footer>
+        <div class="footer">
+            <ul style="list-style: none;">
+                <li>DhruvShaktiSinghRawat</li>
+                <li>201550050</li>
+                <li>GLA University, Mathura</li>
+                <li>11/07/2022</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
